--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
 	padding-top: 15px;
 	display: inline-block;
 }
- ul li {
+ .header ul li {
 
 	float: left;
 	list-style-type: none;
@@ -126,4 +126,52 @@ svg{
 	text-align: center;
 	color: green;
 	font-size: 15px;
+}
+
+.student-details{
+
+	border: 1px solid gray;
+	padding: 50x 100px;
+	margin: 20px 10px 0;
+}
+
+.formRow{
+	 padding: 15px 0 10px;
+	 border: 1px solid gray;
+}
+.formRow label{
+  width: 40%;
+  text-align: left;
+  padding-left: 30px;
+}
+.formRow input{
+	text-align: center;
+}
+
+.about-us-cont{
+
+	padding: 40px 30px;
+	border: 1px solid gray;
+	position: relative;
+}
+.about-us-cont .signature{
+ position: absolute;
+ right:20px;
+ bottom: 10px;
+ font-weight: bold;
+ text-decoration: underline;
+}
+
+
+.contact-us{
+
+	border: 1px solid gray;
+	padding: 50px 20px 10px;
+
+}
+
+.contact-us p{
+
+	text-align: center;
+	
 }
